Fixed a bunch of stuff: mostly links, alignment issues etc  (^υ^)/*

--- a/public/modules/core/css/site.css
+++ b/public/modules/core/css/site.css
@@ -231,9 +231,13 @@ a.pict, .pict a {
 /*** Sidebars ***/
 #sidebar-left img {
     max-width: 80%;
+    margin-right: auto;
+    margin-left: auto;
 }
 #sidebar-right img {
     max-width: 80%;
+    margin-right: auto;
+    margin-left: auto;
 }
 img.article-tile {
     max-width: 100%;
